--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /BlogPostGenerator/__pycache__
 /Readme Generator/__pycache__
 /Recommendation_Generator/__pycache__
+/Recommendation_Generator/recommender/__pycache__
