Broke out into separate files
Broke out into separate files

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /Readme Generator/__pycache__
 /Recommendation_Generator/__pycache__
 /Recommendation_Generator/recommender/__pycache__
+/Jira_Admin_Task_Generator/__pycache__
