--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /Recommendation_Generator/__pycache__
 /Recommendation_Generator/recommender/__pycache__
 /Jira_Admin_Task_Generator/__pycache__
+question_history.json
